@@ -27,25 +27,25 @@ import com.serotonin.m2m2.rt.dataImage.types.MultistateValue;
  */
 public class StartsAndRuntimeListQuantizerTest extends BaseQuantizerTest{
 
-    
+
     @Test
     public void testNoData() throws IOException {
         NextTimePeriodAdjuster adjuster = new NextTimePeriodAdjuster(TimePeriods.DAYS, 1);
         time = ZonedDateTime.of(2017, 01, 01, 00, 00, 00, 0, zoneId);
-        
+
         MutableInt counter = new MutableInt(0);
         BucketCalculator bc = new TimePeriodBucketCalculator(from, to, TimePeriods.DAYS, 1);
         StartsAndRuntimeListQuantizer quantizer = new StartsAndRuntimeListQuantizer(bc, new StatisticsGeneratorQuantizerCallback<StartsAndRuntimeList>() {
-            
+
             @Override
             public void quantizedStatistics(StartsAndRuntimeList statisticsGenerator) throws IOException {
                 counter.increment();
-                StartsAndRuntimeList stats = (StartsAndRuntimeList)statisticsGenerator;
+                StartsAndRuntimeList stats = statisticsGenerator;
                 //Test periodStart
                 Assert.assertEquals(time.toInstant().toEpochMilli(), stats.getPeriodStartTime());
                 //Test periiodEnd
                 Assert.assertEquals(time.plusDays(1).toInstant().toEpochMilli(), stats.getPeriodEndTime());
-                
+
                 //Test first
                 Assert.assertEquals(null, stats.getFirstValue());
                 Assert.assertEquals(null, stats.getFirstTime());
@@ -56,15 +56,15 @@ public class StartsAndRuntimeListQuantizerTest extends BaseQuantizerTest{
                 Assert.assertEquals(null, stats.getStartValue());
                 //Test count
                 Assert.assertEquals(0, stats.getCount());
-                
+
                 //Move to next period time
                 time = (ZonedDateTime)adjuster.adjustInto(time);
             }
         });
         quantizer.done();
-        Assert.assertEquals(new Integer(31), counter.getValue());
+        Assert.assertEquals(Integer.valueOf(31), counter.getValue());
     }
-    
+
     @Test
     public void testNoStartValueOneValuePerPeriod() throws IOException {
         //Generate data at 12 noon for every day in the period
@@ -76,30 +76,30 @@ public class StartsAndRuntimeListQuantizerTest extends BaseQuantizerTest{
             data.add(new IdPointValueTime(1, new MultistateValue(value), time.toInstant().toEpochMilli()));
             time = (ZonedDateTime) adjuster.adjustInto(time);
         }
-        
+
         //Reset time to track periods
         time = ZonedDateTime.of(2017, 01, 01, 00, 00, 00, 0, zoneId);
         MutableInt counter = new MutableInt(0);
         BucketCalculator bc = new TimePeriodBucketCalculator(from, to, TimePeriods.DAYS, 1);
         StartsAndRuntimeListQuantizer quantizer = new StartsAndRuntimeListQuantizer(bc, new StatisticsGeneratorQuantizerCallback<StartsAndRuntimeList>() {
-            
+
             @Override
             public void quantizedStatistics(StartsAndRuntimeList statisticsGenerator) throws IOException {
                 counter.increment();
-                StartsAndRuntimeList stats = (StartsAndRuntimeList)statisticsGenerator;
+                StartsAndRuntimeList stats = statisticsGenerator;
                 //Test periodStart
                 Assert.assertEquals(time.toInstant().toEpochMilli(), stats.getPeriodStartTime());
                 //Test periiodEnd
                 Assert.assertEquals(time.plusDays(1).toInstant().toEpochMilli(), stats.getPeriodEndTime());
 
                 ZonedDateTime sampleTime = time.plusHours(12);
-                
+
                 //Test first
                 Assert.assertEquals(1, stats.getFirstValue().getIntegerValue());
-                Assert.assertEquals((long)sampleTime.toInstant().toEpochMilli(), (long)stats.getFirstTime());
+                Assert.assertEquals(sampleTime.toInstant().toEpochMilli(), (long)stats.getFirstTime());
                 //Test last
                 Assert.assertEquals(1, stats.getLastValue().getIntegerValue());
-                Assert.assertEquals((long)sampleTime.toInstant().toEpochMilli(), (long)stats.getLastTime());
+                Assert.assertEquals(sampleTime.toInstant().toEpochMilli(), (long)stats.getLastTime());
                 //Test start (the first start value will be null
                 if(counter.getValue() == 1)
                     Assert.assertEquals(null, stats.getStartValue());
@@ -107,7 +107,7 @@ public class StartsAndRuntimeListQuantizerTest extends BaseQuantizerTest{
                     Assert.assertEquals(1, stats.getStartValue().getIntegerValue());
                 //Test count
                 Assert.assertEquals(1, stats.getCount());
-                
+
                 //Test StartsList
                 Map<Object, StartsAndRuntime> map = stats.getStartsAndRuntime();
                 StartsAndRuntime one = map.get(1);
@@ -118,40 +118,40 @@ public class StartsAndRuntimeListQuantizerTest extends BaseQuantizerTest{
                     Assert.assertEquals(12*60*60*1000, one.getRuntime());
                 else
                     Assert.assertEquals(24*60*60*1000, one.getRuntime());
-                
+
                 //Move to next period time
                 time = (ZonedDateTime)adjuster.adjustInto(time);
             }
         });
-        
+
         quantizer.firstValue(null, 0, true);
         for(int count = 0; count < data.size(); count++)
             quantizer.row(data.get(count), count + 1);
         quantizer.lastValue(data.get(data.size() - 1), data.size() + 1, true);
         quantizer.done();
-        Assert.assertEquals(new Integer(31), counter.getValue());
+        Assert.assertEquals(Integer.valueOf(31), counter.getValue());
     }
-    
+
     @Test
     public void testStartValueNoPeriodValues() throws IOException {
         //Generate data at 12 noon for every day in the period
         NextTimePeriodAdjuster adjuster = new NextTimePeriodAdjuster(TimePeriods.DAYS, 1);
-        
+
         //Reset time to track periods
         time = ZonedDateTime.of(2017, 01, 01, 00, 00, 00, 0, zoneId);
         MutableInt counter = new MutableInt(0);
         BucketCalculator bc = new TimePeriodBucketCalculator(from, to, TimePeriods.DAYS, 1);
         StartsAndRuntimeListQuantizer quantizer = new StartsAndRuntimeListQuantizer(bc, new StatisticsGeneratorQuantizerCallback<StartsAndRuntimeList>() {
-            
+
             @Override
             public void quantizedStatistics(StartsAndRuntimeList statisticsGenerator) throws IOException {
                 counter.increment();
-                StartsAndRuntimeList stats = (StartsAndRuntimeList)statisticsGenerator;
+                StartsAndRuntimeList stats = statisticsGenerator;
                 //Test periodStart
                 Assert.assertEquals(time.toInstant().toEpochMilli(), stats.getPeriodStartTime());
                 //Test periodEnd
                 Assert.assertEquals(time.plusDays(1).toInstant().toEpochMilli(), stats.getPeriodEndTime());
-                
+
                 //Test first
                 Assert.assertEquals(null, stats.getFirstValue());
                 Assert.assertEquals(null, stats.getFirstTime());
@@ -169,32 +169,32 @@ public class StartsAndRuntimeListQuantizerTest extends BaseQuantizerTest{
                 Assert.assertEquals(100.0d, one.getPercentage(), 0.0001);
                 Assert.assertEquals(1.0d, one.getProportion(), 0.0001);
                 Assert.assertEquals(24*60*60*1000, one.getRuntime());
-                
+
                 //Move to next period time
                 time = (ZonedDateTime)adjuster.adjustInto(time);
             }
         });
-        
+
         quantizer.firstValue(new IdPointValueTime(1, new MultistateValue(1), time.minusHours(3).toInstant().toEpochMilli()), 0, true);
         quantizer.done();
-        Assert.assertEquals(new Integer(31), counter.getValue());
+        Assert.assertEquals(Integer.valueOf(31), counter.getValue());
     }
 
     @Test
     public void testStartValueAtPeriodStartNoPeriodValues() throws IOException {
         //Generate data at 12 noon for every day in the period
         NextTimePeriodAdjuster adjuster = new NextTimePeriodAdjuster(TimePeriods.DAYS, 1);
-        
+
         //Reset time to track periods
         time = ZonedDateTime.of(2017, 01, 01, 00, 00, 00, 0, zoneId);
         MutableInt counter = new MutableInt(0);
         BucketCalculator bc = new TimePeriodBucketCalculator(from, to, TimePeriods.DAYS, 1);
         StartsAndRuntimeListQuantizer quantizer = new StartsAndRuntimeListQuantizer(bc, new StatisticsGeneratorQuantizerCallback<StartsAndRuntimeList>() {
-            
+
             @Override
             public void quantizedStatistics(StartsAndRuntimeList statisticsGenerator) throws IOException {
                 counter.increment();
-                StartsAndRuntimeList stats = (StartsAndRuntimeList)statisticsGenerator;
+                StartsAndRuntimeList stats = statisticsGenerator;
                 //Test periodStart
                 Assert.assertEquals(time.toInstant().toEpochMilli(), stats.getPeriodStartTime());
                 //Test periodEnd
@@ -203,10 +203,10 @@ public class StartsAndRuntimeListQuantizerTest extends BaseQuantizerTest{
                 if(counter.getValue() == 1) {
                     //Test first
                     Assert.assertEquals(1, stats.getFirstValue().getIntegerValue());
-                    Assert.assertEquals((long)sampleTime.toInstant().toEpochMilli(), (long)stats.getFirstTime());
+                    Assert.assertEquals(sampleTime.toInstant().toEpochMilli(), (long)stats.getFirstTime());
                     //Test last
                     Assert.assertEquals(1, stats.getLastValue().getIntegerValue());
-                    Assert.assertEquals((long)sampleTime.toInstant().toEpochMilli(), (long)stats.getLastTime());
+                    Assert.assertEquals(sampleTime.toInstant().toEpochMilli(), (long)stats.getLastTime());
                     //Test start
                     Assert.assertEquals(1, stats.getStartValue().getIntegerValue());
                     //Test count
@@ -238,17 +238,17 @@ public class StartsAndRuntimeListQuantizerTest extends BaseQuantizerTest{
                     Assert.assertEquals(1.0d, one.getProportion(), 0.0001);
                     Assert.assertEquals(24*60*60*1000, one.getRuntime());
                 }
-                
+
                 //Move to next period time
                 time = (ZonedDateTime)adjuster.adjustInto(time);
             }
         });
-        
+
         quantizer.firstValue(new IdPointValueTime(1, new MultistateValue(1), time.toInstant().toEpochMilli()), 0, false);
         quantizer.done();
-        Assert.assertEquals(new Integer(31), counter.getValue());
+        Assert.assertEquals(Integer.valueOf(31), counter.getValue());
     }
-    
+
     @Test
     public void testStartValueOneValuePerPeriod() throws IOException {
         //Generate data at 12 noon for every day in the period
@@ -260,30 +260,30 @@ public class StartsAndRuntimeListQuantizerTest extends BaseQuantizerTest{
             data.add(new IdPointValueTime(1, new MultistateValue(value), time.toInstant().toEpochMilli()));
             time = (ZonedDateTime) adjuster.adjustInto(time);
         }
-        
+
         //Reset time to track periods
         time = ZonedDateTime.of(2017, 01, 01, 00, 00, 00, 0, zoneId);
         MutableInt counter = new MutableInt(0);
         BucketCalculator bc = new TimePeriodBucketCalculator(from, to, TimePeriods.DAYS, 1);
         StartsAndRuntimeListQuantizer quantizer = new StartsAndRuntimeListQuantizer(bc, new StatisticsGeneratorQuantizerCallback<StartsAndRuntimeList>() {
-            
+
             @Override
             public void quantizedStatistics(StartsAndRuntimeList statisticsGenerator) throws IOException {
                 counter.increment();
-                StartsAndRuntimeList stats = (StartsAndRuntimeList)statisticsGenerator;
+                StartsAndRuntimeList stats = statisticsGenerator;
                 //Test periodStart
                 Assert.assertEquals(time.toInstant().toEpochMilli(), stats.getPeriodStartTime());
                 //Test periiodEnd
                 Assert.assertEquals(time.plusDays(1).toInstant().toEpochMilli(), stats.getPeriodEndTime());
 
                 ZonedDateTime sampleTime = time.plusHours(12);
-                
+
                 //Test first
                 Assert.assertEquals(1, stats.getFirstValue().getIntegerValue());
-                Assert.assertEquals((long)sampleTime.toInstant().toEpochMilli(), (long)stats.getFirstTime());
+                Assert.assertEquals(sampleTime.toInstant().toEpochMilli(), (long)stats.getFirstTime());
                 //Test last
                 Assert.assertEquals(1, stats.getLastValue().getIntegerValue());
-                Assert.assertEquals((long)sampleTime.toInstant().toEpochMilli(), (long)stats.getLastTime());
+                Assert.assertEquals(sampleTime.toInstant().toEpochMilli(), (long)stats.getLastTime());
                 //Test start (the first start value will be null
                 Assert.assertEquals(1, stats.getStartValue().getIntegerValue());
                 //Test count
@@ -295,7 +295,7 @@ public class StartsAndRuntimeListQuantizerTest extends BaseQuantizerTest{
                 Assert.assertEquals(100.0d, one.getPercentage(), 0.0001);
                 Assert.assertEquals(1.0d, one.getProportion(), 0.0001);
                 Assert.assertEquals(24*60*60*1000, one.getRuntime());
-                
+
                 //Move to next period time
                 time = (ZonedDateTime)adjuster.adjustInto(time);
             }
@@ -306,15 +306,15 @@ public class StartsAndRuntimeListQuantizerTest extends BaseQuantizerTest{
             quantizer.row(data.get(count), count + 1);
         quantizer.lastValue(data.get(data.size() - 1), data.size() + 1, true);
         quantizer.done();
-        Assert.assertEquals(new Integer(31), counter.getValue());
+        Assert.assertEquals(Integer.valueOf(31), counter.getValue());
     }
-    
+
     @Test
     public void testNoStartValueManyValuesPerPeriod() throws IOException {
         //Generate data at 12 noon for every day in the period
         NextTimePeriodAdjuster adjuster = new NextTimePeriodAdjuster(TimePeriods.DAYS, 1);
         NextTimePeriodAdjuster hourlyAdjuster = new NextTimePeriodAdjuster(TimePeriods.HOURS, 1);
-        
+
         time = ZonedDateTime.of(2017, 01, 01, 12, 00, 00, 0, zoneId);
         List<IdPointValueTime> data = new ArrayList<>();
         while(time.toInstant().isBefore(to.toInstant())) {
@@ -328,17 +328,17 @@ public class StartsAndRuntimeListQuantizerTest extends BaseQuantizerTest{
             }
             time = (ZonedDateTime) adjuster.adjustInto(time);
         }
-        
+
         //Reset time to track periods
         time = ZonedDateTime.of(2017, 01, 01, 00, 00, 00, 0, zoneId);
         MutableInt counter = new MutableInt(0);
         BucketCalculator bc = new TimePeriodBucketCalculator(from, to, TimePeriods.DAYS, 1);
         StartsAndRuntimeListQuantizer quantizer = new StartsAndRuntimeListQuantizer(bc, new StatisticsGeneratorQuantizerCallback<StartsAndRuntimeList>() {
-            
+
             @Override
             public void quantizedStatistics(StartsAndRuntimeList statisticsGenerator) throws IOException {
                 counter.increment();
-                StartsAndRuntimeList stats = (StartsAndRuntimeList)statisticsGenerator;
+                StartsAndRuntimeList stats = statisticsGenerator;
                 //Test periodStart
                 Assert.assertEquals(time.toInstant().toEpochMilli(), stats.getPeriodStartTime());
                 //Test periiodEnd
@@ -346,10 +346,10 @@ public class StartsAndRuntimeListQuantizerTest extends BaseQuantizerTest{
 
                 //Test first
                 Assert.assertEquals(1, stats.getFirstValue().getIntegerValue());
-                Assert.assertEquals((long)time.plusHours(12).toInstant().toEpochMilli(), (long)stats.getFirstTime());
+                Assert.assertEquals(time.plusHours(12).toInstant().toEpochMilli(), (long)stats.getFirstTime());
                 //Test last
                 Assert.assertEquals(10, stats.getLastValue().getIntegerValue());
-                Assert.assertEquals((long)time.plusHours(12).plusHours(9).toInstant().toEpochMilli(), (long)stats.getLastTime());
+                Assert.assertEquals(time.plusHours(12).plusHours(9).toInstant().toEpochMilli(), (long)stats.getLastTime());
                 //Test start (the first start value will be null
                 if(counter.getValue() == 1)
                     Assert.assertEquals(null, stats.getStartValue());
@@ -375,13 +375,13 @@ public class StartsAndRuntimeListQuantizerTest extends BaseQuantizerTest{
                                 Assert.assertEquals(1, value.getStarts());
                                 Assert.assertEquals(100d*(1d/12d), value.getPercentage(), 0.0001);
                                 Assert.assertEquals(1d/12d, value.getProportion(), 0.0001);
-                                Assert.assertEquals(60*60*1000, value.getRuntime());                                
+                                Assert.assertEquals(60*60*1000, value.getRuntime());
                                 break;
                             case 10:
                                 Assert.assertEquals(1, value.getStarts());
                                 Assert.assertEquals(100d*(3d/12d), value.getPercentage(), 0.0001);
                                 Assert.assertEquals(3d/12d, value.getProportion(), 0.0001);
-                                Assert.assertEquals(3*60*60*1000, value.getRuntime());  
+                                Assert.assertEquals(3*60*60*1000, value.getRuntime());
                                 break;
                         }
                     }
@@ -403,37 +403,37 @@ public class StartsAndRuntimeListQuantizerTest extends BaseQuantizerTest{
                                 Assert.assertEquals(1, value.getStarts());
                                 Assert.assertEquals(100d*(1d/24d), value.getPercentage(), 0.0001);
                                 Assert.assertEquals(1d/24d, value.getProportion(), 0.0001);
-                                Assert.assertEquals(60*60*1000, value.getRuntime());                                
+                                Assert.assertEquals(60*60*1000, value.getRuntime());
                                 break;
                             case 10:
                                 Assert.assertEquals(1, value.getStarts());
                                 Assert.assertEquals(100d*(15d/24d), value.getPercentage(), 0.0001);
                                 Assert.assertEquals(15d/24d, value.getProportion(), 0.0001);
-                                Assert.assertEquals(15*60*60*1000, value.getRuntime());  
+                                Assert.assertEquals(15*60*60*1000, value.getRuntime());
                                 break;
                         }
                     }
                 }
-                
+
                 //Move to next period time
                 time = (ZonedDateTime)adjuster.adjustInto(time);
             }
         });
-        
+
         quantizer.firstValue(null, 0, true);
         for(int count = 0; count < data.size(); count++)
             quantizer.row(data.get(count), count + 1);
         quantizer.lastValue(data.get(data.size() - 1), data.size() + 1, true);
         quantizer.done();
-        Assert.assertEquals(new Integer(31), counter.getValue());
+        Assert.assertEquals(Integer.valueOf(31), counter.getValue());
     }
-    
+
     @Test
     public void testStartValueManyValuesPerPeriod() throws IOException {
         //Generate data at 12 noon for every day in the period
         NextTimePeriodAdjuster adjuster = new NextTimePeriodAdjuster(TimePeriods.DAYS, 1);
         NextTimePeriodAdjuster hourlyAdjuster = new NextTimePeriodAdjuster(TimePeriods.HOURS, 1);
-        
+
         time = ZonedDateTime.of(2017, 01, 01, 12, 00, 00, 0, zoneId);
         List<IdPointValueTime> data = new ArrayList<>();
         while(time.toInstant().isBefore(to.toInstant())) {
@@ -447,28 +447,28 @@ public class StartsAndRuntimeListQuantizerTest extends BaseQuantizerTest{
             }
             time = (ZonedDateTime) adjuster.adjustInto(time);
         }
-        
+
         //Reset time to track periods
         time = ZonedDateTime.of(2017, 01, 01, 00, 00, 00, 0, zoneId);
         MutableInt counter = new MutableInt(0);
         BucketCalculator bc = new TimePeriodBucketCalculator(from, to, TimePeriods.DAYS, 1);
         StartsAndRuntimeListQuantizer quantizer = new StartsAndRuntimeListQuantizer(bc, new StatisticsGeneratorQuantizerCallback<StartsAndRuntimeList>() {
-            
+
             @Override
             public void quantizedStatistics(StartsAndRuntimeList statisticsGenerator) throws IOException {
                 counter.increment();
-                StartsAndRuntimeList stats = (StartsAndRuntimeList)statisticsGenerator;
+                StartsAndRuntimeList stats = statisticsGenerator;
                 //Test periodStart
                 Assert.assertEquals(time.toInstant().toEpochMilli(), stats.getPeriodStartTime());
                 //Test periiodEnd
                 Assert.assertEquals(time.plusDays(1).toInstant().toEpochMilli(), stats.getPeriodEndTime());
-              
+
                 //Test first
                 Assert.assertEquals(1, stats.getFirstValue().getIntegerValue());
-                Assert.assertEquals((long)time.plusHours(12).toInstant().toEpochMilli(), (long)stats.getFirstTime());
+                Assert.assertEquals(time.plusHours(12).toInstant().toEpochMilli(), (long)stats.getFirstTime());
                 //Test last
                 Assert.assertEquals(10, stats.getLastValue().getIntegerValue());
-                Assert.assertEquals((long)time.plusHours(12).plusHours(9).toInstant().toEpochMilli(), (long)stats.getLastTime());
+                Assert.assertEquals(time.plusHours(12).plusHours(9).toInstant().toEpochMilli(), (long)stats.getLastTime());
                 //Test start (the first start value will be null
                 if(counter.getValue() == 1)
                     Assert.assertEquals(1, stats.getStartValue().getIntegerValue());
@@ -486,7 +486,7 @@ public class StartsAndRuntimeListQuantizerTest extends BaseQuantizerTest{
                                 Assert.assertEquals(1, value.getStarts());
                                 Assert.assertEquals(100d*(13d/24d), value.getPercentage(), 0.0001);
                                 Assert.assertEquals(13d/24d, value.getProportion(), 0.0001);
-                                Assert.assertEquals(13*60*60*1000, value.getRuntime());    
+                                Assert.assertEquals(13*60*60*1000, value.getRuntime());
                                 break;
                             case 2:
                             case 3:
@@ -499,13 +499,13 @@ public class StartsAndRuntimeListQuantizerTest extends BaseQuantizerTest{
                                 Assert.assertEquals(1, value.getStarts());
                                 Assert.assertEquals(100d*(1d/24d), value.getPercentage(), 0.0001);
                                 Assert.assertEquals(1d/24d, value.getProportion(), 0.0001);
-                                Assert.assertEquals(60*60*1000, value.getRuntime());                                
+                                Assert.assertEquals(60*60*1000, value.getRuntime());
                                 break;
                             case 10:
                                 Assert.assertEquals(1, value.getStarts());
                                 Assert.assertEquals(100d*(3d/24d), value.getPercentage(), 0.0001);
                                 Assert.assertEquals(3d/24d, value.getProportion(), 0.0001);
-                                Assert.assertEquals(3*60*60*1000, value.getRuntime());  
+                                Assert.assertEquals(3*60*60*1000, value.getRuntime());
                                 break;
                         }
                     }
@@ -527,37 +527,37 @@ public class StartsAndRuntimeListQuantizerTest extends BaseQuantizerTest{
                                 Assert.assertEquals(1, value.getStarts());
                                 Assert.assertEquals(100d*(1d/24d), value.getPercentage(), 0.0001);
                                 Assert.assertEquals(1d/24d, value.getProportion(), 0.0001);
-                                Assert.assertEquals(60*60*1000, value.getRuntime());                                
+                                Assert.assertEquals(60*60*1000, value.getRuntime());
                                 break;
                             case 10:
                                 Assert.assertEquals(1, value.getStarts());
                                 Assert.assertEquals(100d*(15d/24d), value.getPercentage(), 0.0001);
                                 Assert.assertEquals(15d/24d, value.getProportion(), 0.0001);
-                                Assert.assertEquals(15*60*60*1000, value.getRuntime());  
+                                Assert.assertEquals(15*60*60*1000, value.getRuntime());
                                 break;
                         }
                     }
                 }
-                
+
                 //Move to next period time
                 time = (ZonedDateTime)adjuster.adjustInto(time);
             }
         });
-        
+
         quantizer.firstValue(new IdPointValueTime(1, new MultistateValue(1), time.minusHours(3).toInstant().toEpochMilli()), 0, true);
         for(int count = 0; count < data.size(); count++)
             quantizer.row(data.get(count), count + 1);
         quantizer.lastValue(data.get(data.size() - 1), data.size() + 1, true);
         quantizer.done();
-        Assert.assertEquals(new Integer(31), counter.getValue());
+        Assert.assertEquals(Integer.valueOf(31), counter.getValue());
     }
-    
+
     @Test
     public void testStartValueAtStartManyValuesPerPeriod() throws IOException {
         //Generate data at 12 noon for every day in the period
         NextTimePeriodAdjuster adjuster = new NextTimePeriodAdjuster(TimePeriods.DAYS, 1);
         NextTimePeriodAdjuster hourlyAdjuster = new NextTimePeriodAdjuster(TimePeriods.HOURS, 1);
-        
+
         time = ZonedDateTime.of(2017, 01, 01, 12, 00, 00, 0, zoneId);
         List<IdPointValueTime> data = new ArrayList<>();
         while(time.toInstant().isBefore(to.toInstant())) {
@@ -571,34 +571,34 @@ public class StartsAndRuntimeListQuantizerTest extends BaseQuantizerTest{
             }
             time = (ZonedDateTime) adjuster.adjustInto(time);
         }
-        
+
         //Reset time to track periods
         time = ZonedDateTime.of(2017, 01, 01, 00, 00, 00, 0, zoneId);
         MutableInt counter = new MutableInt(0);
         BucketCalculator bc = new TimePeriodBucketCalculator(from, to, TimePeriods.DAYS, 1);
         StartsAndRuntimeListQuantizer quantizer = new StartsAndRuntimeListQuantizer(bc, new StatisticsGeneratorQuantizerCallback<StartsAndRuntimeList>() {
-            
+
             @Override
             public void quantizedStatistics(StartsAndRuntimeList statisticsGenerator) throws IOException {
                 counter.increment();
-                StartsAndRuntimeList stats = (StartsAndRuntimeList)statisticsGenerator;
+                StartsAndRuntimeList stats = statisticsGenerator;
                 //Test periodStart
                 Assert.assertEquals(time.toInstant().toEpochMilli(), stats.getPeriodStartTime());
                 //Test periiodEnd
                 Assert.assertEquals(time.plusDays(1).toInstant().toEpochMilli(), stats.getPeriodEndTime());
-                
+
                 if(counter.getValue() == 1) {
                     //Test first
                     Assert.assertEquals(1, stats.getFirstValue().getIntegerValue());
-                    Assert.assertEquals((long)time.toInstant().toEpochMilli(), (long)stats.getFirstTime());
+                    Assert.assertEquals(time.toInstant().toEpochMilli(), (long)stats.getFirstTime());
                 }else {
                     //Test first
                     Assert.assertEquals(1, stats.getFirstValue().getIntegerValue());
-                    Assert.assertEquals((long)time.plusHours(12).toInstant().toEpochMilli(), (long)stats.getFirstTime());
+                    Assert.assertEquals(time.plusHours(12).toInstant().toEpochMilli(), (long)stats.getFirstTime());
                 }
                 //Test last
                 Assert.assertEquals(10, stats.getLastValue().getIntegerValue());
-                Assert.assertEquals((long)time.plusHours(12).plusHours(9).toInstant().toEpochMilli(), (long)stats.getLastTime());
+                Assert.assertEquals(time.plusHours(12).plusHours(9).toInstant().toEpochMilli(), (long)stats.getLastTime());
                 //Test start (the first start value will be null
                 if(counter.getValue() == 1) {
                     Assert.assertEquals(1, stats.getStartValue().getIntegerValue());
@@ -620,7 +620,7 @@ public class StartsAndRuntimeListQuantizerTest extends BaseQuantizerTest{
                                 Assert.assertEquals(2, value.getStarts());
                                 Assert.assertEquals(100d*(13d/24d), value.getPercentage(), 0.0001);
                                 Assert.assertEquals(13d/24d, value.getProportion(), 0.0001);
-                                Assert.assertEquals(13*60*60*1000, value.getRuntime());    
+                                Assert.assertEquals(13*60*60*1000, value.getRuntime());
                                 break;
                             case 2:
                             case 3:
@@ -633,13 +633,13 @@ public class StartsAndRuntimeListQuantizerTest extends BaseQuantizerTest{
                                 Assert.assertEquals(1, value.getStarts());
                                 Assert.assertEquals(100d*(1d/24d), value.getPercentage(), 0.0001);
                                 Assert.assertEquals(1d/24d, value.getProportion(), 0.0001);
-                                Assert.assertEquals(60*60*1000, value.getRuntime());                                
+                                Assert.assertEquals(60*60*1000, value.getRuntime());
                                 break;
                             case 10:
                                 Assert.assertEquals(1, value.getStarts());
                                 Assert.assertEquals(100d*(3d/24d), value.getPercentage(), 0.0001);
                                 Assert.assertEquals(3d/24d, value.getProportion(), 0.0001);
-                                Assert.assertEquals(3*60*60*1000, value.getRuntime());  
+                                Assert.assertEquals(3*60*60*1000, value.getRuntime());
                                 break;
                         }
                     }
@@ -661,28 +661,28 @@ public class StartsAndRuntimeListQuantizerTest extends BaseQuantizerTest{
                                 Assert.assertEquals(1, value.getStarts());
                                 Assert.assertEquals(100d*(1d/24d), value.getPercentage(), 0.0001);
                                 Assert.assertEquals(1d/24d, value.getProportion(), 0.0001);
-                                Assert.assertEquals(60*60*1000, value.getRuntime());                                
+                                Assert.assertEquals(60*60*1000, value.getRuntime());
                                 break;
                             case 10:
                                 Assert.assertEquals(1, value.getStarts());
                                 Assert.assertEquals(100d*(15d/24d), value.getPercentage(), 0.0001);
                                 Assert.assertEquals(15d/24d, value.getProportion(), 0.0001);
-                                Assert.assertEquals(15*60*60*1000, value.getRuntime());  
+                                Assert.assertEquals(15*60*60*1000, value.getRuntime());
                                 break;
                         }
                     }
                 }
-                
+
                 //Move to next period time
                 time = (ZonedDateTime)adjuster.adjustInto(time);
             }
         });
-        
+
         quantizer.firstValue(new IdPointValueTime(1, new MultistateValue(1), time.toInstant().toEpochMilli()), 0, false);
         for(int count = 0; count < data.size(); count++)
             quantizer.row(data.get(count), count + 1);
         quantizer.lastValue(data.get(data.size() - 1), data.size() + 1, true);
         quantizer.done();
-        Assert.assertEquals(new Integer(31), counter.getValue());
+        Assert.assertEquals(Integer.valueOf(31), counter.getValue());
     }
 }
